add check and notice router
without get accessToken
